# Streamlines

./: .gitgnore  CMakeLists.txt  Programs.txt  Readme.txt  arrows.csh
data/: Readme  center.vec  circles.vec  const1.vec  const2.vec  const3.vec  cylinder.vec  dipole.vec  dipole_example.st  saddle.vec  source.vec  spiral.vec  vnoise.vec  vnoise_example.st
libs/: Makefile  cli.cpp  cli.h  clip_line.cpp  clip_line.h  floatimage.cpp  floatimage.h  window.cpp  window.h
src/: HalfFloat.h  Makefile  MiniFloat.h  MiniFloat2.h  dissolve.cpp  dissolve.h  intersect.cpp  intersect.h  lowpass.cpp  lowpass.h  mfield.cpp  noise.cpp  picture.cpp  picture.h  repel.cpp  repel.h  sd_params.cpp  sd_params.h  sd_picture.cpp  sd_picture.h  sd_repel.cpp  sd_repel.h  sd_streamline.cpp  sd_streamline.h  sd_vfield.cpp  sd_vfield.h  stdraw.cpp  stdraw.h  stplace.cpp  stplace.h  streamline.cpp  streamline.h  vfield.cpp  vfield.h  visparams.cpp  visparams.h  xlines.cpp
